fixed right side line on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -357,9 +357,7 @@ h2:hover {
 
 @media screen and (max-width: 500px) {
 
-    body {
-        overflow: hidden;
-    }
 
-
+   #game-canvas{
+max-width: 100%;   }
 }
